crates/alder-driver/src/snapshots/alder_driver__compile__tests__option_lifting_mismatch_does_not_label_an_unrelated_argument.snap
---
source: crates/alder-driver/src/compile.rs
description: "fn consume(value?: Number) {}\nfn conflict() {\n    let nested = Some(Some(7))\n    consume(42)\n    consume(nested)\n}\n"
---
alder::type::type_mismatch

  × type mismatch: expected `Option[Number]`, found `Option[Option[Number]]`
   ╭─[/project/src/main.ald:5:13]
 4 │     consume(42)
 5 │     consume(nested)
   ·             ───┬──
   ·                ╰── these types are incompatible
 6 │ }
   ╰────
