crates/alder-driver/src/snapshots/alder_driver__compile__tests__parser_array_eof.snap
---
source: crates/alder-driver/src/compile.rs
description: "let value = [1"
---
alder::syntax

  × I was expecting `,` or `]` after this array entry at the end of the file
   ╭─[/project/src/main.ald:1:15]
 1 │ let value = [1
   ·             ┬
   ·             ╰── this `[` opens here
   ╰────
  help: separate array entries with commas and close the array with `]`
