crates/alder-driver/src/snapshots/alder_driver__compile__tests__parser_call_separator.snap
---
source: crates/alder-driver/src/compile.rs
description: let value = read(1 2)
---
alder::syntax

  × I was expecting `,` or `)` after this call argument
   ╭─[/project/src/main.ald:1:20]
 1 │ let value = read(1 2)
   ·                 ┬  ┬
   ·                 │  ╰── expected `,` or `)`
   ·                 ╰── this `(` opens here
   ╰────
  help: separate arguments with commas and close the call with `)`
