crates/alder-driver/src/snapshots/alder_driver__compile__tests__parser_for_nested_pattern.snap
---
source: crates/alder-driver/src/compile.rs
description: "fn main() { for [..tail, head] in values {} }"
---
alder::syntax

  × the rest pattern must come last in an array pattern
   ╭─[/project/src/main.ald:1:26]
 1 │ fn main() { for [..tail, head] in values {} }
   ·                 ┬        ┬
   ·                 │        ╰── nothing may follow the rest pattern
   ·                 ╰── this array pattern starts here
   ╰────
  help: write the fixed entries first, as in `[first, ..rest]`
