crates/alder-driver/src/snapshots/alder_driver__compile__tests__parser_if_nested_failure.snap
---
source: crates/alder-driver/src/compile.rs
description: "let value = if true {\n    [read(1 2)]\n}\n"
---
alder::syntax

  × I was expecting a comma or the end of this function call
   ╭─[/project/src/main.ald:2:13]
 1 │ let value = if true {
 2 │     [read(1 2)]
   ·          ┬  ┬
   ·          │  ╰── expected `,` or `)`
   ·          ╰── this argument list starts here
 3 │ }
   ╰────
  help: separate arguments with commas and close the call with `)`
